add: new route for getting contributors from db
